objects/LLC_BI__Treasury_Service__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Account_ID__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is automatically populated. This lookup field is used to specify the application record that is associated to the treasury service record.</description>
        <inlineHelpText>Use this lookup field to associate an application record to this treasury service record.</inlineHelpText>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Automated_Clearing_House_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Automated Clearing House Service</label>
        <referenceTo>LLC_BI__Automated_Clearing_House_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Card_Number__c</fullName>
        <description>This optional field is manually populated with the card number that has been assigned to the access or debit card referred to in the form. The number is collected when creating a debit card.</description>
        <label>Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Service</label>
        <referenceTo>LLC_BI__Cash_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Commercial_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Conversion_Object__c</fullName>
        <description>This field contains the object from which the Treasury Conversion was executed</description>
        <inlineHelpText>This field contains the Id of the object from which the treasury service was converted</inlineHelpText>
        <label>Conversion Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <description>This field determines the default page within the nCino User Interface for this record.</description>
        <inlineHelpText>This field determines the default page within the nCino User Interface for this record.</inlineHelpText>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depository_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depository Service</label>
        <referenceTo>LLC_BI__Depository_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disbursement_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disbursement Service</label>
        <referenceTo>LLC_BI__Disbursement_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>Earliest date for the setup of products .</description>
        <inlineHelpText>Earliest date for the setup of products .</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Billing_Month__c</fullName>
        <description>The first month that the customer should be billed for their Treasury Management Services.</description>
        <inlineHelpText>The first month that the customer should be billed for their Treasury Management Services.</inlineHelpText>
        <label>First Billing Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Implementation_Instructions__c</fullName>
        <description>Where sales can provide further instruction to the implementation team.</description>
        <label>Implementation Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_ATM_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field is automatically populated by the system and is used as an indicator flag for document preparation.</description>
        <label>Is ATM Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lockbox_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lockbox Service</label>
        <referenceTo>LLC_BI__Lockbox_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maintenance_App__c</fullName>
        <description>This field automatically populates via the treasury maintenance conversion. It associates converted treasury services to product-specific maintenance actions. This field corresponds to the unique app name on the route object to control what is displayed to users. Default is null.</description>
        <label>Maintenance App</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Miscellaneous_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Service</label>
        <referenceTo>LLC_BI__Miscellaneous_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Online_Banking_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Banking Service</label>
        <referenceTo>LLC_BI__Online_Banking_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Overdraft_Consent__c</fullName>
        <description>This picklist field is populated during the deposit account opening process. This field indicates the decision made by the customer to either request or refuse institution overdraft services that include and cover overdraft activity on ATM and everyday debit card transactions as part of standard overdraft services. The statement that reflects the customer&apos;s decision will be preceded by an X to indicate the selection. The statement not selected is preceded by a short line segment. The picklist value options are: 1/ Request overdraft service on ATM and everyday debit card transactions; and 2/ Refuse overdraft service on ATM and everyday debit card transactions.</description>
        <label>Overdraft Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request overdraft service</fullName>
                </value>
                <value>
                    <fullName>Refuse overdraft service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Treasury Services</relationshipLabel>
        <relationshipName>Treasury_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reason_for_Suspend_Cancel__c</fullName>
        <description>Reason that a Treasury Service is suspended or cancelled</description>
        <label>Reason for Suspend/Cancel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Technical Requirements</fullName>
                </value>
                <value>
                    <fullName>Client Resource Availability</fullName>
                </value>
                <value>
                    <fullName>Current Provider Delay</fullName>
                </value>
                <value>
                    <fullName>Service No Longer Needed</fullName>
                </value>
                <value>
                    <fullName>Vendor Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reconciliation_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reconciliation Service</label>
        <referenceTo>LLC_BI__Reconciliation_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remote_Deposit_Capture_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remote Deposit Capture Service</label>
        <referenceTo>LLC_BI__Remote_Deposit_Capture_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reporting_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Service</label>
        <referenceTo>LLC_BI__Reporting_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is automatically populated and ties the treasury service to the scenario that it originated from.</description>
        <label>Scenario</label>
        <referenceTo>LLC_BI__Scenario__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Entry</fullName>
                    <default>true</default>
                    <label>Order Entry</label>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Sweep_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sweep Service</label>
        <referenceTo>LLC_BI__Sweep_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TM_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TM Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Wire_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wire Service</label>
        <referenceTo>LLC_BI__Wire_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Zero_Balance_Account_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zero Balance Account Service</label>
        <referenceTo>LLC_BI__Zero_Balance_Account_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The service number is an external, unique key for this service.</description>
        <externalId>true</externalId>
        <label>Treasury Service Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Treasury Service</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Wire_Services</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Relationship__c</columns>
        <columns>LLC_BI__Product_Reference__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Wire_Service__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Wire Services</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Treasury Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>